# smart_subtitle

./: .gitignore  LICENSE  README.md  go.mod  main.go
asr_svc/: CMakeLists.txt
asr_svc/include/: arc_svc.h  audio_capture.h  audio_storage.h  automatic_speech_recognizer.h  ring_buffer.h  speech_recognizer.h
asr_svc/source/: audio_capture.cpp  audio_storage.cpp  automatic_speech_recognizer.cpp  main.cpp  ring_buffer.cpp  speech_recognizer.cpp
llm_svc/: CMakeLists.txt
llm_svc/include/: llm_svc.h
llm_svc/source/: main.cpp
subtitle_server/: CMakeLists.txt
subtitle_server/asr_svc/: CMakeLists.txt  main.cpp
subtitle_server/llm_svc/: CMakeLists.txt
subtitle_server/translate_server/: CMakeLists.txt
subtitle_server/whisper_server/: CMakeLists.txt  main.cpp
